# VERA

./: .editorconfig  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
apps/: api.py  dashboard.py
data/: .gitkeep
docs/: bom.csv  brand-guide.md  data-format.md  engineering-journal.md  glossary.md  paper-notes.md  release-checklist.md
examples/: predict-curl.sh
firmware/: platformio.ini
firmware/src/: ADS1115.cpp  ADS1115.h  AS7265x.cpp  AS7265x.h  C12880MA.cpp  C12880MA.h  Config.h  Illumination.cpp  Illumination.h  Protocol.cpp  Protocol.h  main.cpp
scripts/: ablate_mixing.py  bench-inference.py  bridge.py  build_tflite_micro.sh  check-schema-version.sh  download_relab.py  download_usgs.py  generate_synth_dataset.py  mock_esp32.py  setup-bench.sh  smoke.sh
src/regoscan/: __init__.py  augment.py  datasets.py  evaluate.py  features.py  inference.py  io_csv.py  preprocess.py  quantize.py  schema.py  synth.py  train.py
src/regoscan/models/: __init__.py  cnn.py  plsr.py
src/vera/: __init__.py  active_learning.py  augment.py  calibrate.py  datasets.py  evaluate.py  features.py  inference.py  inference_robust.py  io_csv.py  preprocess.py  quantize.py  sam.py  schema.py  synth.py  train.py  uncertainty.py
src/vera/models/: cnn.py  plsr.py
tests/: __init__.py  conftest.py  test_active_learning.py  test_api.py  test_augment.py  test_bridge_swir.py  test_calibrate.py  test_datasets.py  test_hapke.py  test_inference.py  test_inference_robust.py  test_preprocess.py  test_sam.py  test_schema.py  test_synth.py  test_train_smoke.py  test_uncertainty.py
web/: README.md  UI_STANDARDS.md  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vercel.json
web/api/: model.onnx  predict.py  requirements.txt
web/app/: globals.css  layout.tsx  page.tsx
web/app/about/: page.tsx
web/app/architecture/: page.tsx
web/app/methods/: page.tsx
web/components/: DocPage.tsx  HardwareTelemetry.tsx  Hero.tsx  IlmeniteGauge.tsx  InferenceResults.tsx  Logo.tsx  MissionPanel.tsx  NavBar.tsx  ProbabilityBars.tsx  ScanButton.tsx  ScanHistory.tsx  ScrollProgress.tsx  SkipLink.tsx  SmoothScroll.tsx  SpectralGraph.tsx  SpectrumChart.tsx  SystemTerminal.tsx  ThemeProvider.tsx  TopNav.tsx  UploadPanel.tsx
web/components/docs/: about-extras.tsx  diagrams.tsx  primitives.tsx
web/lib/: README.md  api.ts  brand.ts  constants.ts  format.ts  types.ts
