[project]
name = "vera"
version = "0.1.0"
description = "VERA — Visible & Emission Regolith Assessment probe for lunar mineral classification"
readme = "README.md"
requires-python = ">=3.11,<3.13"
authors = [{ name = "Darius Ferent" }]
license = { text = "MIT" }

dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "scipy>=1.11",
    "scikit-learn>=1.4",
    "pydantic>=2.5",
    "torch>=2.2",
    "matplotlib>=3.8",
    "streamlit>=1.30",
    "onnx>=1.15",
    "requests>=2.31",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "httpx>=0.27",
]
serve = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "onnxruntime>=1.17",
    "python-multipart>=0.0.9",
]

[project.scripts]
vera-train = "vera.train:main"
vera-evaluate = "vera.evaluate:main"
vera-quantize = "vera.quantize:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vera"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "httpx>=0.27",
]
